--- a/src/alfred.css
+++ b/src/alfred.css
@@ -32,6 +32,20 @@ div.searchableTable {
   margin: 4px;
 }
 
+#wozSearchAndSelector {
+
+}
+
+#wozSearchAndSelector > .searchField {
+  width: 300px;
+}
+
+#wozSearchAndSelector > select {
+  float: right;
+  margin: 4px;
+  width: 300px;
+}
+
 .scrollable {
   position: relative;
   height: 100%;
