--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,21 @@
 body {
   margin: 0;
   padding: 0;
+  color: #333;
+
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+/*@media (prefers-color-scheme: dark) {*/
+  /*body {*/
+    /*color: #ddd;*/
+    /*background-color: #222;*/
+  /*}*/
+/*}*/
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
