--- a/src/alfred.css
+++ b/src/alfred.css
@@ -107,7 +107,7 @@ div.woz_button {
   cursor: pointer;
 
   background: #e8e8e8;
-  border: 1px solid #555; /* update placeholder margin */
+  border: 1px solid #989898; /* update placeholder margin */
 
   font-size: 14px;
 }
@@ -115,8 +115,8 @@ div.woz_button {
 /* button border -- */
 
 div.woz_selectable:hover {
-  border: 3px solid #000;
-  padding: 1px;
+  border: 2px solid #000;
+  padding: 2px;
 }
 
 div.woz_selectable:active {
@@ -228,19 +228,25 @@ span.middle-left {
 	the header div floats left with a fixed width, the content is shifted
 	right by the width of the header plus a margin */
 .woz_row_header {
-  width: 100px; /* update row-content.margin-left */
+  /*width: 100px; !* update woz_row_content.margin-left *!*/
   vertical-align: top;
-  padding: 2px;
+  /*padding: 2px;*/
   text-align: right;
-  float: left;
+  flex: 0 0 100px;
+  margin-right: 6px;
 
   font-size: 12px;
   font-weight: bold;
   color: #000;
 }
 
-.row-content {
-  margin-left: 104px; /* update row-header.width */
+.woz_row_content {
+}
+
+.woz_row {
+  display: flex;
+  padding-bottom: 4px;
+  padding-top: 4px;
 }
 
 .odd {
