moving files around

--- a/src/woz/views/alfred.css
+++ b/src/woz/views/alfred.css
@@ -34,7 +34,7 @@ div.searchableTable {
 
 .woz_table_header {
   padding: 4px;
-  margin: 0px;
+  margin: 0;
   border-bottom: 1px solid #dadada;
 }
 
