--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+* {
   margin: 0;
   padding: 0;
   color: #333;
@@ -8,6 +8,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 12px;
 }
 
 /*@media (prefers-color-scheme: dark) {*/
@@ -20,4 +21,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+html {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
