--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  color: #333;
+  /*color: #333;*/
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -23,7 +23,7 @@ code {
     monospace;
 }
 
-html {
+html, body, #root {
   height: 100%;
   width: 100%;
   overflow: hidden;
