adding the current open local file into the list of the recent sources.

--- a/src/woz-app/App.module.css
+++ b/src/woz-app/App.module.css
@@ -4,3 +4,11 @@
   position: absolute;
 }
 
+.connectorEditorSegment#connectorEditorSegment {
+  background: #f0f0f0;
+  min-height: 400px;
+}
+
+.providerEditor#providerEditor {
+  background: #f0f0f0;
+}
