--- a/src/woz-app/App.module.css
+++ b/src/woz-app/App.module.css
@@ -8,6 +8,11 @@
   min-height: 370px;
 }
 
+.connectorEditorTab {
+  position: absolute;
+  width: 90%;
+}
+
 /* the form for the internal editor */
 .connectorEditorSubContainer {
   min-width: 90%;
