added row name to the buttons in the search results

--- a/src/woz/views/button.module.css
+++ b/src/woz/views/button.module.css
@@ -50,6 +50,27 @@
   font-size: 14px;
 }
 
+.titledButton {
+  display: inline-block;
+  vertical-align: text-bottom;
+  position: relative;
+  text-align: center;
+
+  width: 106px;
+  /*height: 50px;*/
+  /*margin: 3px; !* update placeholder margin *! !* update selectable margin *!*/
+  /*padding: 3px;*/
+  /* padding + border width should stay the same across
+      regular and hover states */
+
+  cursor: pointer;
+
+  /*background: #e8e8e8;*/
+  /*border: 1px solid #989898; !* update placeholder margin *!*/
+
+  font-size: 11px;
+}
+
 /* button border -- */
 
 .selectable:hover {
