--- a/src/woz/views/button.module.css
+++ b/src/woz/views/button.module.css
@@ -52,7 +52,7 @@
 
 .titledButton {
   display: inline-block;
-  vertical-align: text-bottom;
+  vertical-align: text-top;
   position: relative;
   text-align: center;
 
