--- a/src/woz/views/woz.module.css
+++ b/src/woz/views/woz.module.css
@@ -35,7 +35,7 @@
   border-bottom: 1px solid #dadada;
 }
 
-#wozSelectorGroupId {
+.wozSelectorGroupId {
   display: flex;
   justify-content: flex-end;
   align-items: center;
